new page layout templates

--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
@@ -33,9 +33,11 @@
             </h1>
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
-            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-              Add a cosmetic product
-            </a>
+            <div class="opss-text-align-right">
+              <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Add a cosmetic product
+              </a>
+            </div>
           </div>
         </div>
         <div class="govuk-grid-row">
