--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -136,39 +136,49 @@ body.js-enabled .opss-nojs-hide {
 .opss-grey-bg {
     background-color: govuk-colour("light-grey");
 }
-
-.opss-document-icon {    /*   A CSS FOR ICON ON MOBILE - REQUIRES DESKTOP ONLY CSS TO SNAP IN FULL SIZE DIMS   */
+.opss-rounded-corners {
+     border-radius: 5px;
+}
+.opss-document-icon-std {    /*   A CSS FOR ICON ON MOBILE - REQUIRES DESKTOP ONLY CSS TO SNAP IN FULL SIZE DIMS. And update HTML to figcaption   */
     position: relative;
-    width: 99px;
-    height: 140px;
     padding: 2px;
-    margin: 0;
+    margin: 0 0 govuk-spacing(2) 0;
     vertical-align: top;
     background: govuk-colour("mid-grey");
+    width: 50px;
+    height: 70px;
 
-    .opss-document-icon img {
+    img {
         display: block;
-        width: 100%;
+        width: 50px;
     }
 
-    .opss-document-icon__filetype {
+    .opss-document-icon-std__filetype {
         visibility: hidden;
+        position: absolute;
+        left: -10000px;
+
+        abbr[title]{
+            border-bottom: none;
+        }
     }
 
     @include govuk-media-query($from: desktop) {
-        .opss-document-icon__filetype {
+        height: 71px;
+        margin: 0;
+
+        .opss-document-icon-std__filetype {
             visibility: visible;
-            position: absolute;
-            top: 18px;
-            left: 13px;
-            width: 75px;
+            left: 2px;
+            top: 7px;
+            width: 50px;
             height: 30px;
             color: govuk-colour("white");
             font-family: inherit;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             font-weight: 700;
-            @include opss-font-size($s: 19px, $l: 1.2);
+            @include opss-font-size($s: 14px, $l: 1.2);
             text-align: center;
         }
     }
@@ -180,7 +190,7 @@ body.js-enabled .opss-nojs-hide {
         background-color: govuk-colour("light-grey");
         margin-right: govuk-spacing(5) !important;
         border-radius: 5px;
-        padding-left: govuk-spacing(2);
+        padding-left: govuk-spacing(3);
 
         .govuk-grid-column-one-quarter > & {
             margin-right: govuk-spacing(7) + govuk-spacing(1) !important;
