--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -186,7 +186,7 @@
                                 </div>
                                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-teams_with_access_other_team_with_access_">
                                     <div class="govuk-form-group">
-                                        <label class="govuk-label" for="teams_with_access_id_">Person or team name</label>
+                                        <label class="govuk-label" for="teams_with_access_id_">Team name</label>
 
                                         <div>
                                             <select class="govuk-select" id="teams_with_access_id_" name="teams_with_access[id][]">
