--- a/app/views/psd-revised-flow/inc_top_nav_1.html
+++ b/app/views/psd-revised-flow/inc_top_nav_1.html
@@ -3,7 +3,7 @@
         <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Products</dt>
-                <dd class="govuk-summary-list__value">0 have been added</dd>
+                <dd class="govuk-summary-list__value">0 added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a product</span>
@@ -13,7 +13,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Businesses</dt>
                 <dd class="govuk-summary-list__value">
-                    2 have been added
+                    2 added
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
@@ -43,11 +43,11 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key ">Case restriction</dt>
-                <dd class="govuk-summary-list__value ">Unrestricted</dd>
+                <dt class="govuk-summary-list__key">Image</dt>
+                <dd class="govuk-summary-list__value">3 case images added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change <span class="govuk-visually-hidden">case restriction</span>
+                        Add <span class="govuk-visually-hidden">a case image</span>
                     </a>
                 </dd>
             </div>
