--- a/app/views/psd-revised-flow/inc_top_nav_1.html
+++ b/app/views/psd-revised-flow/inc_top_nav_1.html
@@ -1,9 +1,13 @@
 <div class="govuk-grid-row">
     <section class="govuk-grid-column-full govuk-!-padding-top-1 govuk-!-padding-right-3 govuk-!-padding-left-3 govuk-!-padding-bottom-3 opss-border-all opss-grey-bg opss-rounded-corners opss-two-col-flow opss-responsive-margin-bottom-6">
-        <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
+
+        <dl role="menu" class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Products</dt>
-                <dd class="govuk-summary-list__value">0 added</dd>
+                <dt class="govuk-summary-list__key">Product</dt>
+                <dd class="govuk-summary-list__value">2 added<!--span class="govuk-visually-hidden">.</span>&nbsp; <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        View<span class="govuk-visually-hidden"> the products</span>
+                    </a-->
+                </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a product</span>
@@ -11,9 +15,11 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Businesses</dt>
+                <dt class="govuk-summary-list__key">Business</dt>
                 <dd class="govuk-summary-list__value">
-                    2 added
+                    2 added<!--span class="govuk-visually-hidden">.</span>&nbsp; <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        View<span class="govuk-visually-hidden"> the Businesses</span>
+                    </a-->
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
@@ -25,9 +31,6 @@
                 <dt class="govuk-summary-list__key">
                     Comment
                 </dt>
-                <!--dd class="govuk-summary-list__value">
-                    In the activity time line
-                </dd-->
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a comment</span>
@@ -36,69 +39,91 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Correspondence</dt>
+                <dd class="govuk-summary-list__value">3 added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Add <span class="govuk-visually-hidden">a correspondence</span>
+                        Add<span class="govuk-visually-hidden"> a correspondence</span>
                     </a>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Image</dt>
-                <dd class="govuk-summary-list__value">3 case images added</dd>
+                <dt class="govuk-summary-list__key">Accident / Incident</dt>
+                <dd class="govuk-summary-list__value">2 added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Add <span class="govuk-visually-hidden">a case image</span>
+                        Add<span class="govuk-visually-hidden"> an accident or incident</span>
+                    </a>
+                </dd>
+            </div>
+            <!--div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Image <span class="govuk-!-font-weight-regular">(cases)</span></dt>
+                <dd class="govuk-summary-list__value">3 added</dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a case image</span>
                     </a>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Case risk level</dt>
-                <dd class="govuk-summary-list__value">Medium risk</dd>
+                <dt class="govuk-summary-list__key">Image <span class="govuk-!-font-weight-regular">(products)</span></dt>
+                <dd class="govuk-summary-list__value">4 added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change<span class="govuk-visually-hidden"> risk level</span>
+                        Add<span class="govuk-visually-hidden"> a product image</span>
                     </a>
                 </dd>
-            </div>
+            </div-->
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Coronavirus related</dt>
+                <dt class="govuk-summary-list__key">
+                    Corrective action
+                </dt>
                 <dd class="govuk-summary-list__value">
-                    Not coronavirus related
+                    1 added
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change<span class="govuk-visually-hidden"> coronavirus status</span>
+                        Add<span class="govuk-visually-hidden"> a corrective action</span>
                     </a>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Case owner
+                    Risk assessment
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Darren Harridence &ndash; Renfrewshire Council
+                    2 added
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change<span class="govuk-visually-hidden"> case owner</span>
+                        Add<span class="govuk-visually-hidden"> a risk assessment</span>
                     </a>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Status</dt>
-                <dd class="govuk-summary-list__value">Open</dd>
+                <dt class="govuk-summary-list__key">Test result</dt>
+                <dd class="govuk-summary-list__value">
+                    0 added
+                </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change<span class="govuk-visually-hidden"> this case</span>
+                        Add<span class="govuk-visually-hidden"> a test result</span>
                     </a>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Added teams</dt>
-                <dd class="govuk-summary-list__value">Renfrewshire Council</dd>
+                <dt class="govuk-summary-list__key">Image</dt>
+                <dd class="govuk-summary-list__value">7 added</dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Change <span class="govuk-visually-hidden">teams added to the case</span>
+                        Add<span class="govuk-visually-hidden"> an image</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Document / Attachment</dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a document or attachment</span>
                     </a>
                 </dd>
             </div>
