--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -28,7 +28,7 @@
             <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
                 <div class="opss-text-align-right">
                     <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                        Add an assessment
+                        Add a risk assessment
                     </a>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 </ul>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state">Risk level</a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Risk level</a>
 
                 <ul class="govuk-list">
                     <li>
@@ -136,7 +136,7 @@
                     Medium risk
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the case risk level</span>
                     </a>
                 </dd>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                     <div class="opss-text-align-right">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19">
                             Edit<span class="govuk-visually-hidden"> assessment 1</span>
                         </a>
                     </div>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                     <div class="opss-text-align-right">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19">
                             Edit<span class="govuk-visually-hidden"> assessment 2</span>
                         </a>
                     </div>
