--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -362,7 +362,7 @@ ul.opss-radio-list {
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
-        column-gap: govuk-spacing(8);
+        column-gap: 80px; /*govuk-spacing(8); */
 
         .opss-summary-list-mixed > div {
             /*min-height: 3rem;*/
@@ -373,6 +373,10 @@ ul.opss-radio-list {
 
             dt {
                 width: 36% !important;
+            }
+
+            dd.govuk-summary-list__value {
+                text-align: center;
             }
         }
     }
