--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -442,10 +442,18 @@ dl.opss-summary-list-aside {
 
     &.opss-summary-list-mixed--narrow-dt > div {
         dt {
-            width: 20%;
+            width: 25%;
         }
         dt + dd {
             min-width: 50%;
+        }
+    }
+
+    .opss-grouping & {
+        &.opss-summary-list-mixed--narrow-dt {
+            dt {
+                width: 24%;
+            }
         }
     }
 
