change to content and actions bar

--- a/app/views/psd-revised-flow/case.html
+++ b/app/views/psd-revised-flow/case.html
@@ -11,9 +11,11 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
         <span class="govuk-caption-l">Allergation: 2101-0008 </span>
-        <h1 class="govuk-heading-l">
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case
         </h1>
+
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
@@ -34,7 +36,7 @@
     </div-->
 </div>
 
-{% include "psd-revised-flow/inc_top_nav_1.html" %}
+
 
 <div class="govuk-grid-row">
     <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
@@ -120,7 +122,7 @@
         </ul>
     </nav>
 
-    {% include "psd-revised-flow/inc_case_content_1.html" %}
+    {% include "psd-revised-flow/inc_case_content_2.html" %}
 
 </div>
 
