--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-            <dl class="govuk-summary-list opss-summary-list-mixed">
+            <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-mixed">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Date assessed
@@ -249,7 +249,7 @@
                 </div>
             </div>
 
-            <dl class="govuk-summary-list opss-summary-list-mixed">
+            <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-mixed">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Date assessed
