--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -261,6 +261,11 @@ ul.opss-radio-list {
         min-width: 76px;
         text-align: center;
     }
+    &.opss-tag--lrg {
+        @include opss-font-size($s: 16px, $l: 1.2);
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
 
 .opss-cross-through {
@@ -353,19 +358,33 @@ ul.opss-radio-list {
 }
 /*********************************************************************/
 
+.opss-2-col-flow,
+.opss-3-col-flow {
+    dl div dd:last-of-type {
+        margin-bottom: 0 !important;
+    }
+}
+
 @include govuk-media-query($from: desktop) {
     .opss-desktop-padding-0 {
         padding: 0 !important ;
     }
+    .opss-desktop-padding-top-3 {
+        padding-top: govuk-spacing(3) !important ;
+    }
+    .opss-desktop-padding-bottom-4 {
+        padding-bottom: govuk-spacing(4) !important ;
+    }
 
-    .opss-two-col-flow {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
-        column-gap: 80px; /*govuk-spacing(8); */
+    .opss-summary-list__row--split {
+        margin-top: 80px;
+    }
+
+    .opss-2-col-flow {
+        -moz-column-count: 2; -webkit-column-count: 2; column-count: 2;
+        column-gap: 80px;
 
         .opss-summary-list-mixed > div {
-            /*min-height: 3rem;*/
             break-inside: avoid-column;
         }
         .opss-summary-list-mixed.opss-summary-list-mixed--sm {
@@ -373,16 +392,40 @@ ul.opss-radio-list {
 
             dt {
                 width: 36% !important;
+                @include word-wrap;
             }
 
-            dd.govuk-summary-list__value {
+            dt + dd {
                 text-align: center;
+            }
+        }
+    }
+    .opss-3-col-flow {
+        -moz-column-count: 3; -webkit-column-count: 3; column-count: 3;
+        column-gap: govuk-spacing(3);
+
+        .opss-summary-list-mixed > div {
+            break-inside: avoid-column;
+        }
+        .opss-summary-list-mixed.opss-summary-list-mixed--sm {
+            margin-bottom: 0;
+
+            dt {
+                width: auto !important;
+                @include word-wrap;
+
+                span {
+                    @include opss-font-size($s: 14px, $l: 1.2);
+                    position: relative;
+                    top: -1px;
+                }
             }
         }
     }
 
     @-moz-document url-prefix() {/*firefox only: col flow bug */
-        .opss-two-col-flow {
+        .opss-2-col-flow,
+        .opss-3-col-flow {
             .govuk-summary-list {
                 display: unset;
             }
