design details on home pg

--- a/app/views/psd-revised-flow/inc_case_content_2.html
+++ b/app/views/psd-revised-flow/inc_case_content_2.html
@@ -28,6 +28,22 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
+                    Reference <span class="opss-numero" title="Number">№</span>
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    12345-1882 <i class="govuk-body-s opss-secondary-text"> --- Trading stds only ---</i>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row govuk-visually-hidden">
+                <dt class="govuk-summary-list__key">
+                    Allergation
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    2101-0008
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
                     Description
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -39,7 +55,7 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi, libero facilis quidem nulla placeat quas aliquid dolore, saepe hic sit exercitationem? Veniam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi, libero facilis quidem nulla placeat quas aliquid dolore, saepe hic sit exercitationem? Veniam. <!-- opss user: what is being alleged, shows here on current service -->
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -56,7 +72,7 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Close<span class="govuk-visually-hidden"> the case</span>
+                        Close<span class="govuk-visually-hidden"> this case</span>
                     </a>
                 </dd>
             </div>
