--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -81,7 +81,7 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Document / Attachment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(4<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dt class="govuk-summary-list__key">Supporting information&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(4<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a document or attachment</span>
