--- a/app/views/psd-revised-flow/case-trading-stds-admin.html
+++ b/app/views/psd-revised-flow/case-trading-stds-admin.html
@@ -48,6 +48,14 @@
         <ul class="govuk-list opss-left-nav">
             <li class="opss-left-nav__active">
                 <a href="case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#safety" class="govuk-link govuk-link--no-visited-state">
+                            Safety and compliance
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Products (2)</a>
@@ -71,12 +79,12 @@
                 <ul class="govuk-list">
                     <li>
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Imports are us UK
+                            Reocco imports Limited
                         </a>
                     </li>
                     <li>
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Retailer business name
+                            Lipopton retail Ltd
                         </a>
                     </li>
                 </ul>
@@ -122,7 +130,7 @@
         </ul>
     </nav>
 
-    {% include "psd-revised-flow/inc_case_content_2.html" %}
+    {% include "psd-revised-flow/inc_case_content_trading-stds-admin.html" %}
 
 </div>
 
