--- a/app/views/psd-revised-flow/inc_case_content_trading-stds-admin.html
+++ b/app/views/psd-revised-flow/inc_case_content_trading-stds-admin.html
@@ -28,10 +28,10 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Reference <span class="opss-numero" title="Number">№</span>
+                    Reference <span class="opss-numero" title="Number">&numero;</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    12345-1882 <i class="govuk-body-s opss-secondary-text"> --- Trading stds only ---</i>
+                    12345-1882
                 </dd>
             </div>
             <div class="govuk-summary-list__row govuk-visually-hidden">
@@ -83,6 +83,14 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Created</dt>
                 <dd class="govuk-summary-list__value">13 December 2021</dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Notifying country
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    <i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i>
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -161,6 +169,53 @@
                 </dd>
             </div>
         </dl>
+
+        <h3 id="safety" class="govuk-heading-m opss-grouping__heading-m govuk-!-margin-top-9">
+            Safety and compliance
+        </h3>
+
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Reported as
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Unsafe
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the reported safety</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Primary hazard
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Electric shock
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the primary hazard</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Hazard description
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the hazard description</span>
+                    </a>
+                </dd>
+            </div>
+        </dl>
+
 
     </section>
 
