--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -72,12 +72,12 @@
                 <ul class="govuk-list">
                     <li>
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Imports are us UK
+                            Reocco imports Limited
                         </a>
                     </li>
                     <li>
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Retailer business name
+                            Lipopton retail Ltd
                         </a>
                     </li>
                 </ul>
