--- a/app/views/psd-revised-flow/inc_top_nav_1.html
+++ b/app/views/psd-revised-flow/inc_top_nav_1.html
@@ -1,5 +1,5 @@
 <div class="govuk-grid-row">
-    <section class="govuk-grid-column-full govuk-!-padding-top-1 govuk-!-padding-right-3 govuk-!-padding-left-3 govuk-!-padding-bottom-3 opss-border-all opss-grey-bg opss-rounded-corners opss-two-col-flow opss-responsive-margin-bottom-6">
+    <section class="govuk-grid-column-full govuk-!-padding-top-1 govuk-!-padding-right-3 govuk-!-padding-left-3 govuk-!-padding-bottom-3 opss-border-all opss-grey-bg opss-rounded-corners opss-2-col-flow opss-responsive-margin-bottom-6">
 
         <dl role="menu" class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
