--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -1,3 +1,155 @@
+{% extends "layout-01.html" %}
+
+{% block pageTitle %}
+    Template 1
+{% endblock %}
+
+
+
+{% block content %}
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters">
+        <span class="govuk-caption-l">Allergation: 2101-0008 </span>
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+            Case
+        </h1>
+
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
+    </div>
+    <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
+        <div class="opss-text-align-right">
+            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Close case
+            </a><!-- or, Re-open case -->
+        </div>
+    </div>
+    <!--div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-2">
+
+        <ul class="govuk-list opss-float-right-desktop opss-text-align-right">
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Close case</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change Case owner</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Restrict this Case</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change risk level</a></li>
+        </ul>
+
+    </div-->
+</div>
+
+
+
+<div class="govuk-grid-row">
+    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
+
+        <a href="#page-content" class="govuk-skip-link opss-skip-link">
+            Skip to the main content
+        </a>
+
+        <ul class="govuk-list opss-left-nav">
+            <li class="opss-left-nav__active">
+                <a href="case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#safety" class="govuk-link govuk-link--no-visited-state">
+                            Safety and compliance
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#source" class="govuk-link govuk-link--no-visited-state">
+                            Allergation source
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Products (2)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            The Ipsum product one
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Lorem second product name
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses (2)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Reocco imports Limited
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Lipopton retail Ltd
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images (7)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="images#cases" class="govuk-link govuk-link--no-visited-state">
+                            Case images (3)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="images#products" class="govuk-link govuk-link--no-visited-state">
+                            Product images (4)
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information (8)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents (2)</a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
+                            Corrective actions (1)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
+                            Risk assessments (2)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
+                            Correspondence (2)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
+                            Test results (1)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
+                            Other (1)
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+            </li>
+        </ul>
+    </nav>
+
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
         {% include "psd-revised-flow/inc_top_nav_2.html" %}
@@ -26,14 +178,14 @@
                     </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
+            <!--div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Reference <span class="opss-numero" title="Number">&numero;</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                     12345-1882
                 </dd>
-            </div>
+            </div-->
             <div class="govuk-summary-list__row govuk-visually-hidden">
                 <dt class="govuk-summary-list__key">
                     Allergation
@@ -89,7 +241,7 @@
                     Notifying country
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i>
+                    <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -148,7 +300,13 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Case risk level</dt>
-                <dd class="govuk-summary-list__value">Medium risk</dd>
+                <dd class="govuk-summary-list__value">
+                    Medium risk
+
+                    <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                        <span class="govuk-visually-hidden"> - </span>Validated
+                    </span>
+                </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the risk level</span>
@@ -216,6 +374,48 @@
             </div>
         </dl>
 
+        <section class="govuk-!-margin-top-9 opss-grouping">
+            <h3 id="source" class="govuk-heading-m opss-grouping__heading-m">
+                Allergation source
+            </h3>
+
+            <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Source type
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Consumer
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Contact details
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                            <li>
+                                Mr Peter Richardson
+                            </li>
+                            <li>
+                                Telephone: 09923 897889      <!-- we should have the tel and email status from the form -->
+                            </li>
+                            <li>
+                                Email: <a href="mailto:prichardson@gmail.com" class="govuk-link govuk-link--no-visited-state">prichardson@gmail.com</a>
+                            </li>
+                            <li>
+                                And other details lorem ipsum, dolor sit amet consectetur adipisicing elit. Et tenetur ab quasi culpa voluptate adipisci ad.
+                            </li>
+                        </ul>
+                    </dd>
+                </div>
+            </dl>
+
+            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">Only teams added to the case can view allegation contact details</p>
+        </section>
 
     </section>
 
+</div>
+
+{% endblock %}
