--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -1,3 +1,155 @@
+{% extends "layout-01.html" %}
+
+{% block pageTitle %}
+    Template 1
+{% endblock %}
+
+
+
+{% block content %}
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters">
+        <span class="govuk-caption-l">Enquiry: 2101-0009 </span>
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+            Case
+        </h1>
+
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
+    </div>
+    <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
+        <div class="opss-text-align-right">
+            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Close case
+            </a><!-- or, Re-open case -->
+        </div>
+    </div>
+    <!--div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-2">
+
+        <ul class="govuk-list opss-float-right-desktop opss-text-align-right">
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Close case</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change Case owner</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Restrict this Case</a></li>
+            <li><a href="#" class="govuk-link govuk-link--no-visited-state opss-text-underline-offset">Change risk level</a></li>
+        </ul>
+
+    </div-->
+</div>
+
+
+
+<div class="govuk-grid-row">
+    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
+
+        <a href="#page-content" class="govuk-skip-link opss-skip-link">
+            Skip to the main content
+        </a>
+
+        <ul class="govuk-list opss-left-nav">
+            <li class="opss-left-nav__active">
+                <a href="case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#safety" class="govuk-link govuk-link--no-visited-state">
+                            Safety and compliance
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#source" class="govuk-link govuk-link--no-visited-state">
+                            Enquiry source
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Products (2)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            The Ipsum product one
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Lorem second product name
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses (2)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Reocco imports Limited
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Lipopton retail Ltd
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="images.html" class="govuk-link govuk-link--no-visited-state">Images (7)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="images#cases" class="govuk-link govuk-link--no-visited-state">
+                            Case images (3)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="images#products" class="govuk-link govuk-link--no-visited-state">
+                            Product images (4)
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information (8)</a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents (2)</a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#corrective" class="govuk-link govuk-link--no-visited-state">
+                            Corrective actions (1)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#assessment" class="govuk-link govuk-link--no-visited-state">
+                            Risk assessments (2)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#correspondence" class="govuk-link govuk-link--no-visited-state">
+                            Correspondence (2)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#testresult" class="govuk-link govuk-link--no-visited-state">
+                            Test results (1)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="supporting-information#other" class="govuk-link govuk-link--no-visited-state">
+                            Other (1)
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+            </li>
+        </ul>
+    </nav>
+
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
         {% include "psd-revised-flow/inc_top_nav_2.html" %}
@@ -18,7 +170,7 @@
                     Case name
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    New feature - readable case names
+                    Enquiries are already asked to create a case name
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -148,7 +300,13 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Case risk level</dt>
-                <dd class="govuk-summary-list__value">Medium risk</dd>
+                <dd class="govuk-summary-list__value">
+                    Medium risk
+
+                    <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                        <span class="govuk-visually-hidden"> - </span>Not validated
+                    </span>
+                </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the risk level</span>
@@ -180,7 +338,7 @@
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Unsafe
+                    Not provided
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -188,37 +346,11 @@
                     </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Primary hazard
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    Electric shock
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the primary hazard</span>
-                    </a>
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Hazard description
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the hazard description</span>
-                    </a>
-                </dd>
-            </div>
         </dl>
 
         <section class="govuk-!-margin-top-9 opss-grouping">
             <h3 id="source" class="govuk-heading-m opss-grouping__heading-m">
-                Allergation source
+                Enquiry source
             </h3>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
@@ -228,6 +360,22 @@
                     </dt>
                     <dd class="govuk-summary-list__value">
                         Consumer
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Received
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        3 March 2018
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Received by
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Telephone
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -258,3 +406,6 @@
 
     </section>
 
+</div>
+
+{% endblock %}
