--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -19,20 +19,10 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Comment&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(7<span class="govuk-visually-hidden"> added</span>)</span>
-                </dt>
+                <dt class="govuk-summary-list__key">Image&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(7<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Add<span class="govuk-visually-hidden"> a comment</span>
-                    </a>
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Correspondence&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(3<span class="govuk-visually-hidden"> added</span>)</span></dt>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Add<span class="govuk-visually-hidden"> a correspondence</span>
+                        Add<span class="govuk-visually-hidden"> an image</span>
                     </a>
                 </dd>
             </div>
@@ -65,6 +55,14 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Correspondence&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(3<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a correspondence</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Test result&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(0<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
@@ -73,18 +71,20 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Image&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(7<span class="govuk-visually-hidden"> added</span>)</span></dt>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        Add<span class="govuk-visually-hidden"> an image</span>
-                    </a>
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Supporting information&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(4<span class="govuk-visually-hidden"> added</span>)</span></dt>
+                <dt class="govuk-summary-list__key">Other supporting <br class="opss-br-desktop">information&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(1<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a document or attachment</span>
+                    </a>   <!-- this link goes to the current form page listing the 5x options of type of information -->
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Comment
+                </dt>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                        Add<span class="govuk-visually-hidden"> a comment</span>
                     </a>
                 </dd>
             </div>
